# CodeHelpReportingService

./: .env  Cargo.toml  dev.json
src/: main.rs
src/Router/: Router.rs
src/dao/: mod.rs  user_login_dao.rs
src/enum/: CachingEnums.rs  Difficulty.rs  LoginType.rs  mod.rs  question_type_enum.rs
src/handlers/: code_help_reporting_handler.rs  mod.rs
src/models/: LoginDetails.rs  OtpRequest.rs  TokenRequest.rs  UserDetails.rs  mod.rs
src/mongo/: mod.rs  mongo_client.rs  mongo_query_service.rs  mongo_service.rs
src/routes/: code_help_reporting_routes.rs  mod.rs
src/services/: mod.rs  reporting_service.rs  tracker_service.rs  user_details_service.rs  user_service.rs
src/services/traits/: LoginServiceTrait.rs  mod.rs
src/struct/: TrackQuestion.rs  UserDetails.rs  mod.rs
src/utils/: constants.rs
