[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
serde_json = "1.0.133"
env_logger = "0.11.5"
log = "0.4.22"
lazy_static = "1.5.0"
serde = { version = "1.0.215", features = ["derive"] }
mongodb = "3.1.0"
tokio = "1.41.1"
bson = "2.13.0"
chrono = "0.4.38"
